--- a/src/main/resources/templates/chatting/NewFile.mustache
+++ b/src/main/resources/templates/chatting/NewFile.mustache
@@ -6,11 +6,13 @@
 </head>
 <body>
 <h1>하하하하하</h1>
-<form action="">
-	<input type="text" name="msg"/>
+<form id = "messageForm" name="messageForm">
+	<input type="text" id="message" placeholder="Type a message..." autocomplete="off" class="form-control"/>
 	<input type="submit" name="btn"/>
-	<textarea name="chatLogs" id="" cols="30" rows="10"></textarea>
+	<textarea name="chatLogs" id="chatLogs" cols="30" rows="10"></textarea>
 </form>
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.4.0/sockjs.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
 <script src="/js/chat/chat.js"></script>
 </html>
