address into addrss+detailAddr

--- a/src/main/resources/templates/chatting/chatPage.mustache
+++ b/src/main/resources/templates/chatting/chatPage.mustache
@@ -6,9 +6,9 @@
 </head>
 <body>
 <h1>하하하하하</h1>
-<form id = "messageForm" name="messageForm">
+<form id ="messageForm" name="messageForm">
 	<input type="text" id="message" placeholder="Type a message..." autocomplete="off" class="form-control"/>
-	<input type="submit" name="btn"/>
+	<button type="submit" class="primary">보내기</button>
 	<textarea name="chatLogs" id="chatLogs" cols="30" rows="10"></textarea>
 </form>
 </body>
