autodeletion for old socketmessages(2 week) + chatroom(if empty) added

--- a/src/main/resources/templates/chatting/chatroom.mustache
+++ b/src/main/resources/templates/chatting/chatroom.mustache
@@ -39,5 +39,5 @@ const receiver = "{{{receiver}}}";
 const username = "{{{username}}}";
 const roomId = "{{{roomId}}}";
 </script>
-<script src="/js/chat/chat_ver2.js"></script>
+<script src="/js/chat/chat.js"></script>
 </html>
