UserService fixed to send address

--- a/src/main/resources/templates/chatting/chatroom.mustache
+++ b/src/main/resources/templates/chatting/chatroom.mustache
@@ -38,6 +38,8 @@
 const receiver = "{{{receiver}}}";
 const username = "{{{username}}}";
 const roomId = "{{{roomId}}}";
+const senderPic = "{{{senderPic}}}";
+const receiverPic = "{{{receiverPic}}}";
 </script>
 <script src="/js/chat/chat.js"></script>
 </html>
