--- a/src/main/resources/templates/chatting/roomlist.mustache
+++ b/src/main/resources/templates/chatting/roomlist.mustache
@@ -6,23 +6,22 @@
 </head>
 <body>
 <h2>{{nickname}} 님의 채팅방 리스트</h2>
+	<div>
+	    <form action="/socket/room" method="POST">
+	        <input type="text" id="receiver" name="receiver" placeholder="상대방 이름을 입력하세요" maxlength="20" required>
+	        <input type="submit" value="채팅방 생성">
+	    </form>
+	</div>
     <div>
         <table>
             {{#chatRooms}}
 	            <tr> 
-	                <td><h3>{{writer}}</h3></td> 
-	                <td><h3>{{lastMsg}}</h3></td> 
-	                <td><a href="/socket/chat/{{chatRoomId}}">입장</a></td> 
+	                <td><h3>{{writer}}</h3></td>
+	                <td><img src="../files/profiles/{{profilePic}}" alt="ProfilePicture" height="30px" width="30"/></td>
+	                <td><a href="/socket/chat/{{chatRoomId}}">삭제</a></td> 
 	            </tr>
             {{/chatRooms}}
         </table>
     </div>
-<div>
-    <form action="/socket/room" method="POST">
-        <input type="text" id="receiver" name="receiver" placeholder="상대방 이름을 입력하세요" maxlength="20" required>
-        <input type="text" id="sender" name="sender" maxlength="20" value="{{userId}}" required>
-        <input type="submit" value="채팅방 생성">
-    </form>
-</div>
 </body>
 </html>
