--- a/src/main/resources/templates/chatting/chatroom.mustache
+++ b/src/main/resources/templates/chatting/chatroom.mustache
@@ -5,6 +5,7 @@
 <title>Yuja Chat</title>
 </head>
 <body>
+<img src="{{receiverPic}}" alt="" />
 <h1>{{receiver}}와 체팅</h1>
 <a href="/rooms">채팅방 나가기</a>
 	<div id="chatlogs">
