--- a/src/main/resources/templates/chatting/roomlist.mustache
+++ b/src/main/resources/templates/chatting/roomlist.mustache
@@ -16,8 +16,8 @@
         <table>
             {{#chatRooms}}
 	            <tr> 
-	                <td><h3>{{writer}}</h3></td>
-	                <td><img src="../files/profiles/{{profilePic}}" alt="ProfilePicture" height="30px" width="30"/></td>
+	                <td><a href="/socket/chat/{{chatRoomId}}"><h3>{{writer}}</h3></a></td>
+	                <td><a href="/socket/chat/{{chatRoomId}}"><img src="../files/profiles/{{profilePic}}" alt="ProfilePicture" height="50px" width="50px"/></a></td>
 	                <td><a href="/socket/chat/{{chatRoomId}}">삭제</a></td> 
 	            </tr>
             {{/chatRooms}}
