--- a/src/main/resources/templates/chatting/roomlist.mustache
+++ b/src/main/resources/templates/chatting/roomlist.mustache
@@ -3,30 +3,31 @@
 <head>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="/chat_css/chat.css" />
+
 <title>Insert title here</title>
 </head>
 
 {{! 채팅방 처음에 들어가기전 채팅방 리스트 }}
 <body>
 <div class="ChatListTitle">
-   <h2>{{nickname}} 님의 채팅방 리스트</h2>
+   <h2><strong>"{{nickname}}"</strong> 님의 채팅방</h2>
 </div>
    <div>
        <form class="ChatForm" action="/socket/room" method="POST">
-           <input class="ChatSearch" type="text" id="receiver" name="receiver" placeholder="상대방 닉네임을 입력하세요" maxlength="20" required>
-           <input class="ChatSubmit" type="submit" value="채팅방 생성">
+           <input class="ChatSearch" type="text" id="receiver" name="receiver" placeholder="상대방 닉네임을 입력하세요!" maxlength="20" required>
+           <input class="ChatSubmit" id="ChatSubmitIcon" type="submit" value="Start!">
        </form>
    </div>
     <div>
-        <table>
+        <div class="ChatRoomsWrapper">
             {{#chatRooms}}
-               <tr> 
-                   <td><img src="../files/profiles/{{profilePic}}" alt="ProfilePicture" height="30px" width="30"/></td>
-                   <td><h3>{{writer}}</h3></td>
-                   <td><a href="/socket/chat/{{chatRoomId}}">삭제</a></td> 
-               </tr>
+            <div class="RoomWrapper">
+                   <div class="ChatImg"><a href="/socket/chat/{{chatRoomId}}"><img src="../files/profiles/{{profilePic}}" alt="ProfilePicture"/></a></div>
+                   <div class="ChatSender">{{writer}}</div>
+                   <div class="ChatRoomIn"><a href="/socket/chat/{{chatRoomId}}">나가기</a></div>
+            </div>
             {{/chatRooms}}
-        </table>
+        </div>
     </div>
 </body>
 </html>
