--- a/src/main/resources/templates/chatting/roomlist.mustache
+++ b/src/main/resources/templates/chatting/roomlist.mustache
@@ -6,7 +6,6 @@
 
 <title>Insert title here</title>
 </head>
-
 {{! 채팅방 처음에 들어가기전 채팅방 리스트 }}
 <body>
 <div class="ChatListTitle">
@@ -24,10 +23,13 @@
             <div class="RoomWrapper">
                    <div class="ChatImg"><a href="/socket/chat/{{chatRoomId}}"><img src="../files/profiles/{{profilePic}}" alt="ProfilePicture"/></a></div>
                    <div class="ChatSender">{{writer}}</div>
-                   <div class="ChatRoomIn"><a href="/socket/chat/{{chatRoomId}}">나가기</a></div>
+                   <div class="ChatRoomIn"><a href="#" id="delete" onClick="delete({{chatRoomId}})">나가기</a></div>
+                   <div><input type="button" id="click" value="삭제" onclick="deleteById({{chatRoomId}})"></div>
             </div>
             {{/chatRooms}}
         </div>
     </div>
 </body>
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+<script src="/js/chat/rooms.js"></script>
 </html>
