--- a/src/main/resources/static/chat_css/chat.css
+++ b/src/main/resources/static/chat_css/chat.css
@@ -41,133 +41,182 @@
   margin-left: 1%;
 }
 
-.ChatRoomsWrapper {
-	
-}
-
 .RoomWrapper {
-	margin-bottom: 2%;
+  margin-bottom: 2%;
 }
 
 .ChatImg {
-	display: inline-block;
+  display: inline-block;
 }
 
 .ChatImg > a > img {
-	width: 10vw;
-	height: 10vw;
-	border-radius: 50%;
+  width: 10vw;
+  height: 10vw;
+  border-radius: 50%;
 }
 
 .ChatSender {
-	display: inline-block;
-	font-size: 1.8rem;
-	font-weight: bold;
+  display: inline-block;
+  font-size: 1.8rem;
+  font-weight: bold;
 }
 
 .ChatRoomIn {
-	display: inline-block;
-	font-size: 1.5rem;
-	margin-left: 3%;
+  display: inline-block;
+  font-size: 1.5rem;
+  margin-left: 3%;
 }
 
 .ChatRoomIn > a {
-	color: #c4302b; 
-	text-decoration: none; 
-	outline: none;
-	font-weight: bold;
+  color: #c4302b;
+  text-decoration: none;
+  outline: none;
+  font-weight: bold;
 }
-
-
 
 .ChatWho {
   font-size: 1.3rem;
 }
 
+.ChatWho > h1 {
+	display: inline-block;
+}
+
+.ChatWho > a {
+	float: right;
+	font-size: 2rem;
+	font-weight: bold;
+	color: #c4302b;
+	text-decoration:none;
+	outline: none;
+}
+
+
+.ChatOut {
+	font-size: 1.5rem;
+}
+
 #ChatLogsWrapper {
-	background-color: #dddddd;
-	padding: 3%;
+  background-color: #dddddd;
+  padding: 3%;
+  min-height: 20vh;
 }
 
 .ChatSenderBigWrapper {
-	text-align: right;
+  text-align: right;
 }
 
 .ChatSenderWrapper {
-	background-color: #fff2f2;
-	margin-bottom: 2%;
-	display: inline-block;
-	padding: 2%;
+  background-color: #fff2f2;
+  margin-bottom: 2%;
+  display: inline-block;
+  padding: 2%;
 }
 
 .SenderImgWrapper {
-	text-align: center;
+  text-align: center;
+  display: inline-block;
 }
 
 .ChatSendProfileImg {
-	border-radius: 50%;
-	width: 12vw;
-	height: 9vh;
+  border-radius: 50%;
+  width: 8vw;
+  height: 6vh;
 }
 
 .ChatMessageSender {
-	max-width: 30vw;
-	overflow-x: hidden;
+  max-width: 15vw;
+  overflow-x: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
   font-size: 1.2rem;
   margin-bottom: 5%;
   text-align: center;
+  display: inline-block;
 }
 
-.ChatMessageContent {
-	text-align: left;
-	width: 30vw;
+.SenderChatMessageContent {
+  text-align: left;
+  width: 30vw;
 }
 
-.ChatTime {
-	display: inline-block;
+.SenderChatDate {
+  float: right;
+}
+
+.ChatReceiverBigWrapper {
+  text-align: left;
 }
 
 .ChatReceiverWrapper {
-	background-color: #fff2f2;
-	margin-bottom: 2%;
-	display: inline-block;
-	padding: 2%;
+  background-color: #d4fbff;
+  margin-bottom: 2%;
+  display: inline-block;
+  padding: 2%;
 }
 
 .ReceiverImgWrapper {
-	text-align: center;
+  text-align: center;
+  display: inline-block;
 }
 
 .ChatReceiverProfileImg {
-	border-radius: 50%;
-	width: 12vw;
-	height: 9vh;
+  border-radius: 50%;
+  width: 8vw;
+  height: 6vh;
 }
 
 .ChatMessageReceiver {
-	max-width: 30vw;
-	overflow-x: hidden;
+  max-width: 30vw;
+  overflow-x: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
   font-size: 1.2rem;
   margin-bottom: 5%;
   text-align: center;
+  display: inline-block;
 }
 
-.ChatMessageContent {
-	text-align: left;
-	width: 30vw;
+.ReceiverChatMessageContent {
+  text-align: right;
+  width: 30vw;
 }
 
-.ChatTime {
-	display: inline-block;
+.ReceiverChatDate {
+  float: left;
 }
 
+.ChatContent {
+  display: inline-block;
+  font-size: 1.2rem;
+}
 
+.MessageInputWrapper {
+	margin-top: 3%;
+	text-align: center;
+}
 
+.MessageInput {
+  border: 4px solid #dddddd;
+  padding: 2%;
+  font-size: 1.8rem;
+  width: 70vw;
+  text-align: center;
+  font-weight: bold;
+}
 
+.MessageInput:focus {
+  outline: none;
+  background-color: none;
+  font-weight: bold;
+}
 
-
-
+.MessageButton {
+  font-size: 1.8rem;
+  font-weight: bold;
+  border: 3px solid #5280ff;
+  background-color: #5280ff;
+  border-radius: 50%;
+  margin-left: 2%;
+  cursor: pointer;
+}
