chat changed + profilePicId send added in findById in userServiceImpl

--- a/src/main/resources/templates/chatting/chatroom.mustache
+++ b/src/main/resources/templates/chatting/chatroom.mustache
@@ -42,7 +42,7 @@
    <div class="MessageInputWrapper">
    	<form onsubmit="return send()">
       <input class="MessageInput" type="text" id="message" placeholder="Message" autocomplete="off"/>
-      <button class="MessageButton" type="button">보내기</button>
+      <button class="MessageButton" type="button" onclick="return send()">보내기</button>
     </form>
       <a class="MessageGoBack" href="/rooms">뒤로</a>
    </div>
