--- a/src/main/resources/templates/chatting/roomlist.mustache
+++ b/src/main/resources/templates/chatting/roomlist.mustache
@@ -25,7 +25,7 @@
             {{#chatRooms}}
             <div class="RoomWrapper" id="roomNum{{chatRoomId}}">
                    <div class="ChatImg"><a href="javascript:void(0);" id="enterRoom" onClick="enterRoom({{chatRoomId}})"><img src="../files/profiles/{{profilePic}}" alt="ProfilePicture"/></a></div>
-                   <div class="ChatSender">{{writer}}</div>
+                   <div class="ChatSender"><a href="javascript:void(0);" id="enterRoom" onClick="enterRoom({{chatRoomId}})">{{writer}}</a></div>
                    <div class="ChatRoomIn"><a href="javascript:void(0);" id="delete" onClick="deleteById({{chatRoomId}})">나가기</a></div>
             </div>
             {{/chatRooms}}
