--- a/src/main/resources/static/chat_css/chat.css
+++ b/src/main/resources/static/chat_css/chat.css
@@ -82,13 +82,14 @@
 	display: inline-block;
 }
 
-.ChatWho > a {
+.MessageGoBack {
 	float: right;
-	font-size: 2rem;
+	font-size: 1.3rem;
 	font-weight: bold;
 	color: #c4302b;
 	text-decoration:none;
 	outline: none;
+	display: block;
 }
 
 
