--- a/src/main/resources/static/chat_css/chat.css
+++ b/src/main/resources/static/chat_css/chat.css
@@ -3,6 +3,10 @@
   font-family: 'scdream3';
 }
 
+body {
+	font-family: 'scdream3';
+}
+
 .ChatListTitle {
   font-size: 1.5rem;
   margin-bottom: 5%;
@@ -92,7 +96,6 @@
 
 .chatWhoName {
     display: inline-block;
-    margin-top: 2%;
     margin-left: 5%;
     vertical-align: middle;
 }
