chat disconnection option added

--- a/src/main/resources/templates/chatting/chatroom.mustache
+++ b/src/main/resources/templates/chatting/chatroom.mustache
@@ -49,6 +49,7 @@
       <input class="MessageInput" type="text" id="message" placeholder="메세지를 적어주세요" autocomplete="off" autofocus="autofocus"/>
       <button class="MessageButton" type="button" onclick="return send()">💬</button>
     </form>
+    <a href="javascript:void(0)" onclick="return disconnect()">나가기</a>
     </div>
    </div>
 </body>
