chatting default img location changed

--- a/src/main/resources/templates/chatting/chatroom.mustache
+++ b/src/main/resources/templates/chatting/chatroom.mustache
@@ -11,7 +11,7 @@
 <body>
 <div class="whoBox">
 	<div class="ChatWho">
-  		<img class="ChatWhoImg" src="/files/profiles/{{receiverPic}}" alt="" />
+  		<img class="ChatWhoImg" src="{{receiverPic}}" alt="" />
 	</div>
 	<div class="chatWhoName">
 		{{receiver}}
@@ -33,7 +33,7 @@
          <div class="ChatReceiverBigWrapper">
             <div class="ChatReceiverWrapper">
 	            <div class="ReceiverImgWrapper">
-	            	<img class="ChatReceiverProfileImg" src="/files/profiles/{{receiverPic}}" alt="" />
+	            	<img class="ChatReceiverProfileImg" src="{{receiverPic}}" alt="" />
 	            </div>
                <div class="ChatMessageReceiver">{{sender}}</div>
                <div class="ReceiverChatMessageContent"><div><p class="ChatContent">{{content}}</p></div><span class="ReceiverChatDate">{{createdDate}}</span></div>
