--- a/src/main/resources/static/chat_css/chat.css
+++ b/src/main/resources/static/chat_css/chat.css
@@ -51,6 +51,7 @@ body {
   font-family: 'scdream3';
   text-align: center;
   font-weight: bold;
+  opacity: 0.9;
 }
 
 .ChatSearch:focus {
@@ -62,7 +63,6 @@ body {
 .ChatSubmit {
   font-size: 2rem;
   font-weight: bold;
-  background: #dddddd;
   border: none;
   border-radius: 50%;
   cursor: pointer;
