--- a/src/main/resources/templates/chatting/roomlist.mustache
+++ b/src/main/resources/templates/chatting/roomlist.mustache
@@ -15,7 +15,7 @@
    <div>
        <div class="ChatForm">
 	       <form onsubmit="return findRoom()">
-	           <input class="ChatSearch" type="text" id="receiver" name="receiver" placeholder="상대방 닉네임을 입력하세요!" maxlength="20" autofocus="on" autocomplete="off" required>
+	           <input class="ChatSearch" type="text" id="receiver" name="receiver" placeholder="상대방 닉네임을 입력하세요" maxlength="20" autofocus="on" autocomplete="off">
 	           <input class="ChatSubmit" id="ChatSubmitIcon" type="submit" value="Start!" onclick="return findRoom()">       
 	       </form>
        </div>
