--- a/src/main/resources/static/chat_css/chat.css
+++ b/src/main/resources/static/chat_css/chat.css
@@ -180,17 +180,6 @@ body {
   height: 6vh;
 }
 
-.ChatMessageSender {
-  max-width: 15vw;
-  overflow-x: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  font-size: 1.2rem;
-  margin-bottom: 5%;
-  text-align: center;
-  display: inline-block;
-}
-
 .SenderChatMessageContent {
   text-align: left;
   width: 35vw;
@@ -250,6 +239,8 @@ body {
 }
 
 .ChatContent {
+	word-wrap: break-word;
+	word-break: break-word;
     font-weight: bold;
     display: inline-block;
     font-size: 0.9rem;
