--- a/src/main/resources/templates/chatting/chatroom.mustache
+++ b/src/main/resources/templates/chatting/chatroom.mustache
@@ -47,7 +47,7 @@
    	<div class="submitBox">
    	<form onsubmit="return send()">
    	  <button class="MessageButtonL" type="button" onclick="location.href='/rooms'">◀</button>
-      <input class="MessageInput" type="text" id="message" autofocus="autofocus" placeholder="메세지를 적어주세요" autocomplete="off"/>
+      <input class="MessageInput" type="text" id="message" placeholder="메세지를 적어주세요" autocomplete="off"/>
       <button class="MessageButtonR" type="button" onclick="return send()">💬</button>
     </form>
     </div>
