--- a/src/main/resources/templates/chatting/roomlist.mustache
+++ b/src/main/resources/templates/chatting/roomlist.mustache
@@ -24,7 +24,7 @@
         <div class="ChatRoomsWrapper">
             {{#chatRooms}}
             <div class="RoomWrapper" id="roomNum{{chatRoomId}}">
-                   <div class="ChatImg"><a href="javascript:void(0);" id="enterRoom" onClick="enterRoom({{chatRoomId}})"><img src="../files/profiles/{{profilePic}}" alt="ProfilePicture"/></a></div>
+                   <div class="ChatImg"><a href="javascript:void(0);" id="enterRoom" onClick="enterRoom({{chatRoomId}})"><img src="{{profilePic}}" alt="ProfilePicture"/></a></div>
                    <div class="ChatSender"><a href="javascript:void(0);" id="enterRoom" onClick="enterRoom({{chatRoomId}})">{{writer}}</a></div>
                    <div class="ChatRoomIn"><a href="javascript:void(0);" id="delete" onClick="deleteById({{chatRoomId}})">❌</a></div>
             </div>
