chatNoti changed little bit. now only getting the id

--- a/src/main/resources/templates/chatting/chatroom.mustache
+++ b/src/main/resources/templates/chatting/chatroom.mustache
@@ -18,6 +18,10 @@
 	</div>
 </div>
    <div id="ChatLogsWrapper">
+   <div style="text-align: center;">
+   	<span style="color:grey">메세지는 최대 2주 동안 보관됩니다</span>
+   	<br />
+   </div>
    	<div id="chatLog">
       {{#messages}}
          {{#ownerOrNot}}
