--- a/src/main/resources/templates/chatting/chatroom.mustache
+++ b/src/main/resources/templates/chatting/chatroom.mustache
@@ -18,7 +18,7 @@
 	</div>
 </div>
    <div id="ChatLogsWrapper">
-   <div style="text-align: center;">
+   <div class="chatNotice">
    	<span style="color:grey">메세지는 최대 2주 동안 보관됩니다</span>
    	<hr />
    </div>
