--- a/src/main/resources/static/chat_css/chat.css
+++ b/src/main/resources/static/chat_css/chat.css
@@ -127,6 +127,9 @@ body {
     border-bottom: 3px solid #c4302b;
     position:fixed;
     width: 95%;
+    background:white;
+    margin-top: -9px;
+    padding-top: 10px;
 }
 .ChatWho {
   display:inline-block;
@@ -161,6 +164,7 @@ body {
 #ChatLogsWrapper {
   padding: 3%;
   min-height: 20vh;
+  margin-bottom: 35px;
 }
 #chatLog {
 	
@@ -235,6 +239,7 @@ body {
   display: inline-block;
   font-weight:bold;
   font-family: 'scdream3';
+  margin-left: 5px;
 }
 
 .ReceiverChatMessageContent {
@@ -261,6 +266,11 @@ body {
 	margin-top: 1%;
 	text-align: center;
 	border-top: 2px solid #c4302b;
+	position: fixed;
+    top: 92%;
+    width: 95%;
+    background: white;
+    height:8%;
 }
 .submitBox {
 	margin-top: 1%;
