--- a/src/main/resources/templates/chatting/chatroom.mustache
+++ b/src/main/resources/templates/chatting/chatroom.mustache
@@ -9,10 +9,10 @@
 {{! 채팅방 들어갈때 -> 채팅 기록 남은거 보여주는 div }}
 
 <body>
-<div class="whoBox">
-	<div class="ChatWho">
-  		<img class="ChatWhoImg" src="{{receiverPic}}" alt="" />
-	</div>
+<div class="whoBox"
+><div class="ChatWho"
+><img class="ChatWhoImg" src="{{receiverPic}}" alt="" 
+/></div>
 	<div class="chatWhoName">
 		{{receiver}}
 	</div>
