board delete changed- if boardType either 2/3 then remove editor/thumb from user's authorities and if user is none of youtuber/editor/thumb then his/her likes get removed as welll

--- a/src/main/resources/templates/chatting/roomlist.mustache
+++ b/src/main/resources/templates/chatting/roomlist.mustache
@@ -16,7 +16,7 @@
        <div class="ChatForm">
 	       <form onsubmit="return findRoom()">
 	           <input class="ChatSearch" type="text" id="receiver" name="receiver" placeholder="상대방 닉네임을 입력하세요" maxlength="20" autocomplete="off">
-	           <input class="ChatSubmit" id="ChatSubmitIcon" type="submit" value="Start!" onclick="return findRoom()">       
+	           <input class="ChatSubmit" id="ChatSubmitIcon" type="submit" value="🍳" click="return findRoom()">       
 	       </form>
        </div>
    </div>
