--- a/src/main/resources/static/chat_css/chat.css
+++ b/src/main/resources/static/chat_css/chat.css
@@ -38,16 +38,14 @@ body {
   text-align: center;
   margin-bottom: 5%;
   font-family: 'scdream3';
+  border-bottom: 2px solid #c4302b;
 }
 
 .ChatSearch {
-	border-bottom: 2px solid #c4302b;
-	border-top:none;
-	border-left:none;
-	border-right:none;
+	border: none;
   padding: 2%;
   font-size: 1.2rem;
-  width: 80vw;
+  width: 75vw;
   font-family: 'scdream3';
   text-align: center;
   font-weight: bold;
@@ -61,13 +59,15 @@ body {
 }
 
 .ChatSubmit {
-  font-size: 2rem;
+  font-size: 1rem;
   font-weight: bold;
   border: none;
   border-radius: 50%;
   cursor: pointer;
+  background-color: #c4302b;
   margin-left: 1%;
-  display:none;
+  border-radius: 30%;
+  cursor: pointer;
 }
 .ChatRoomsWrapper {
 	margin-left:8%;
