--- a/src/main/resources/static/chat_css/chat.css
+++ b/src/main/resources/static/chat_css/chat.css
@@ -8,11 +8,11 @@
 }
 
 body {
-	font-family: 'scdream3';
-	-ms-overflow-style: none;
+   font-family: 'scdream3';
+   -ms-overflow-style: none;
 }
 ::-webkit-scrollbar { 
-	display: none;
+   display: none;
 }
 .ChatListTitle {
     font-size: 1.5rem;
@@ -25,13 +25,13 @@ body {
     position: relative;
 }
 .ChatListTitle h3 {
-	margin:auto;
-	padding-bottom:10px;
+   margin:auto;
+   padding-bottom:10px;
 }
 #ErrorMsg {
-	font-size: 1rem;
-	text-align: center;
-	font-family: 'scdream3';
+   font-size: 1rem;
+   text-align: center;
+   font-family: 'scdream3';
 }
 
 .ChatForm {
@@ -42,7 +42,7 @@ body {
 }
 
 .ChatSearch {
-	border: none;
+   border: none;
   padding: 2%;
   font-size: 110%;
   width: 75vw;
@@ -70,7 +70,7 @@ body {
   cursor: pointer;
 }
 .ChatRoomsWrapper {
-	margin-left:8%;
+   margin-left:8%;
 }
 .RoomWrapper {
   margin-bottom: 2%;
@@ -79,7 +79,7 @@ body {
 }
 
 .ChatImg {
-	float:left;
+   float:left;
 }
 
 .ChatImg > a > img {
@@ -98,16 +98,16 @@ body {
   width: 60%;
   overflow-x: hidden;
   margin-top:5%;
-  	margin-left: 5%;
-  	font-family: 'scdream3';
+     margin-left: 5%;
+     font-family: 'scdream3';
 }
 .ChatSender a {
-	color:black;
+   color:black;
   text-decoration:none;
 }
 
 .ChatRoomIn {
-	margin-top: 5%;
+   margin-top: 5%;
   font-size: 1rem;
   margin-left: 3%;
 }
@@ -122,7 +122,7 @@ body {
 /* chatroom */
 
 .whoBox {
-	display: flex;
+   display: flex;
     vertical-align: middle;
     border-bottom: 3px solid #c4302b;
     position:fixed;
@@ -135,13 +135,13 @@ body {
   display:inline-block;
 }
 .ChatWhoImg {
-	border-radius: 50%;
-	width: 12vw;
-	height: 10vh;
+   border-radius: 50%;
+   width: 12vw;
+   height: 10vh;
 }
 .ChatWho > h2 {
-	text-align: center;
-	display: inline-block;
+   text-align: center;
+   display: inline-block;
 }
 
 .chatWhoName {
@@ -154,11 +154,11 @@ body {
     font-family: 'scdream3';
 }
 .chatNotice {
-	margin-top: 20%;
-	text-align: center;
+   margin-top: 30%;
+   text-align: center;
 }
 .ChatOut {
-	font-size: 1.5rem;
+   font-size: 1.5rem;
 }
 
 #ChatLogsWrapper {
@@ -250,8 +250,8 @@ body {
 }
 
 .ChatContent {
-	word-wrap: break-word;
-	word-break: break-word;
+   word-wrap: break-word;
+   word-break: break-word;
     font-weight: bold;
     display: inline-block;
     font-size: 0.9rem;
@@ -260,17 +260,17 @@ body {
 }
 
 .MessageInputWrapper {
-	margin-top: 1%;
-	text-align: center;
-	border-top: 2px solid #c4302b;
-	position: fixed;
+   margin-top: 1%;
+   text-align: center;
+   border-top: 2px solid #c4302b;
+   position: fixed;
     top: 92%;
     width: 95%;
     background: white;
     height:8%;
 }
 .submitBox {
-	margin-top: 1%;
+   margin-top: 1%;
 }
 
 .MessageInput {
@@ -291,7 +291,7 @@ body {
   font-weight: bold;
 }
 .MessageInput:focus::placeholder {
-	color:white;
+   color:white;
 }
 .MessageButtonL {
   font-size: 1.2rem;
@@ -308,4 +308,19 @@ body {
   border-radius: 30%;
   margin-left: 3%;
   cursor: pointer;
+}
+
+@media all and (max-width: 770px) {
+   .MessageInputWrapper {
+       margin-top: -4%;
+       height: 12%;
+   }
+}
+.NewChatNotice{
+  display: inline-block;
+  font-size: 1.2rem;
+  cursor: pointer;
+}
+.NewChatNotice > a{
+  text-decoration: none;
 }
